responsive starts here

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head><title>index</title>
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<meta name="viewpoint" content="device-width,initial-scale=1.0">
 </head>
 <body>
  <header class="header">
